"@Deprecated" code should not be used